--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ qlcplus (4.12.0) stable; urgency=low
   * Web Access: fixed visibility of nested frame pages
   * Plugins/DMX USB: reworked to have asynchronous transmission and frequency setting from UI
   * Plugins/OSC: added support for double values (in 0.0 - 1.0 range)
+  * Plugins/MIDI: [Linux] fix Program Change MIDI channel
   * Fixture Editor: reworked to define more accurate information (see documentation)
   * Fixture Editor: fixed D4 definitions import
   * New input profile: Akai APC40 mkII (thanks to Ovidijus Cepukas)
