resources: one more fixture (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -65,7 +65,7 @@ qlcplus (4.12.0) stable; urgency=low
   * New fixtures: Stage Right 10Wx9 LED Flat PAR, 3-Color LED Light Bar (thanks to Daniel Smith)
   * New fixture: Chauvet Rogue R1 Spot (thanks to David Wolfe)
   * New fixtures: American DJ Dotz Panel 2.4, Flash-Butrym LED PAR 64 4x30W COB RGBW (thanks to Fotis)
-  * New fixture: Pro-Lights Genesis (thanks to Lorenzo Andreani)
+  * New fixtures: Pro-Lights Genesis, BB5 Pix (thanks to Lorenzo Andreani)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200
 
