--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qlcplus (4.12.1) stable; urgency=low
 
+  * engine/RGBMatrix: fix crash when a fixture group has out of bounds heads
+
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sat, 10 Feb 2019 12:13:14 +0200
 
 qlcplus (4.12.0) stable; urgency=low
