--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qlcplus (4.12.2) stable; urgency=low
+
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 26 May 2019 12:13:14 +0200
+
 qlcplus (4.12.1) stable; urgency=low
 
   * engine/RGBMatrix: fix crash when a fixture group has out of bounds heads
