--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qlcplus (4.12.2) stable; urgency=low
   * Simple Desk: fix universe reset erasing channel modifiers
   * Virtual Console/Slider: fix LTP channels being written continuously
   * Virtual Console/Slider: fix inverted behavior
+  * UI: fix Stop all Functions fading out all intensity channels
   * Web Access: fix crash caused by VC widgets on deleted frame pages
   * Fixture Editor: fix 'Nothing' type not handled correctly
   * Plugins/DMX USB: default DMXIS to Pro Tx/Rx
