--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ qlcplus (4.12.2) stable; urgency=low
   * UI: fix Stop all Functions fading out all intensity channels
   * Web Access: fix crash caused by VC widgets on deleted frame pages
   * Web Access: fix VC Sliders in level mode not changing DMX values
+  * Web Access: added "setFunctionStatus" API (thanks to Gabriele C.)
   * Fixture Editor: fix 'Nothing' type not handled correctly
   * Plugins/DMX USB: default DMXIS to Pro Tx/Rx
   * NEW OS2L plugin (see documentation)
