resources: 9 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,12 @@ qlcplus (4.12.2) stable; urgency=low
   * New fixture: Ledj Performer 18 Quad Zoom (thanks to Allan Rhynas)
   * New fixtures: JB Systems Super Solar White, Stairville DJ Lase Polar 200 (thanks to Andres Robles)
   * New fixture: Varytec BAT.BAR 8 RGBW (thaks to Chris de Rock)
+  * New fixture: Tomshine Mini Gobo Moving Head (thanks to Gaudig)
+  * New fixtures: Cameo Auro Spot 100 and 200 (thanks to István Király)
+  * New fixture: Epsilon PixBeam (thanks to Rolo Saenz)
+  * New fixture: Lumeri PRO-COB 200 (thanks to Christian Deplano)
+  * New fixture: Martin ERA 300 Profile (thanks to John Yiannikakis)
+  * New fixtures: Cameo HydraBeam 4000, Stairville FS-x75 Follow Spot, PAR64 CX6 RGBWAUV (thanks to Luke Bonett)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 28 Jul 2019 12:13:14 +0200
 
