resources: 10 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,13 +22,18 @@ qlcplus (4.12.2) stable; urgency=low
   * New fixtures: JB Systems Super Solar White, Stairville DJ Lase Polar 200 (thanks to Andres Robles)
   * New fixture: Varytec BAT.BAR 8 RGBW (thaks to Chris de Rock)
   * New fixture: Tomshine Mini Gobo Moving Head (thanks to Gaudig)
-  * New fixtures: Cameo Auro Spot 100 and 200 (thanks to István Király)
+  * New fixtures: Cameo Auro Spot 100 and 200, Twinscan 20 (thanks to István Király)
   * New fixture: Epsilon PixBeam (thanks to Rolo Saenz)
   * New fixture: Lumeri PRO-COB 200 (thanks to Christian Deplano)
   * New fixture: Martin ERA 300 Profile (thanks to John Yiannikakis)
   * New fixtures: Cameo HydraBeam 4000, Stairville FS-x75 Follow Spot, PAR64 CX6 RGBWAUV (thanks to Luke Bonett)
+  * New fixtures: American DJ Fog Fury Jett Pro, Illusion Dotz 4.4, Cameo LED PAR 64 RGB 36x1W (thanks to Dávid Czirók)
+  * New fixtures: Elation Cuepix Blinder WW2, Fuze Wash Z350, Platinum Spot III (thanks to Dávid Czirók)
+  * New fixture: Involight LEDSTROB400 (thanks to Dávid Czirók)
+  * New fixture: JB-Systems Emperor (thanks to Andrea Ballarin)
+  * New fixture: Showlite LB 4390 (thanks to Ballonpower)
 
- -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 28 Jul 2019 12:13:14 +0200
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 25 Aug 2019 12:13:14 +0200
 
 qlcplus (4.12.1) stable; urgency=low
 
