--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 qlcplus (4.12.2) stable; urgency=low
 
+  * engine: fix submaster not affecting a Chaser startup intensity
   * Simple Desk: fix faders not overriding value = 0
   * Simple Desk: fix universe reset erasing channel modifiers
   * Virtual Console/Slider: fix LTP channels being written continuously
