--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+qlcplus (4.12.3) stable; urgency=low
+
+ -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 29 Dec 2019 12:13:14 +0200
+
 qlcplus (4.12.2) stable; urgency=low
 
   * engine: fix submaster not affecting a Chaser startup intensity
