resources: 5 new fixtures (see changelog)

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,11 @@ qlcplus (4.12.3) stable; urgency=low
   * New fixture: Robe Robin ParFect 150 (thanks to Iro Suraci)
   * New fixture: Eliminator Lighting Follow Spot 100 LED (thanks to Chris Yarger)
   * New fixture: Equinox Domin8R II (thanks to Andrew Newton)
+  * New fixture: Cameo CLMPAR3 (thanks to Eric Lachery)
+  * New fixture: SGM P-5 (thanks to Matthias Schlecht)
+  * New fixture: Martin ELP-CL Profile (thanks to John Yiannikakis)
+  * New fixture: American DJ Flat Par QA12X
+  * New fixture: Nicols WP600Z (thanks to Philippe Thibault)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 26 Apr 2020 12:13:14 +0200
 
