--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,11 @@ qlcplus (4.12.3) stable; urgency=low
   * New fixture: Pro-Lights CromoWash300 (thanks to Bruno)
   * New fixture: Eurolite NH-30 MK2 (thanks to Peter Goderie)
   * New fixture: Stairville Z100M (thanks to Stefan Gross)
+  * New fixture: Eurolite LED SL-600 (thanks to Tim Cullingworth)
+  * New fixture: Laserworld PRO-730RGB (thanks to Ian Stewart)
+  * New fixtures: JB-Lighting Varycolor P3, Varyscan P3, Varyscan P4 (thanks to Marcus Lammert)
+  * New fixture: Fun-Generation LED Pot 12x1W RGBW (thanks to Mark van Kemenade)
+  * New fixture: Ibiza 400 RGB (thanks to Jochem de Kruijf)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 26 Apr 2020 12:13:14 +0200
 
