--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ qlcplus (4.12.3) stable; urgency=low
   * engine: fix cloning a Show
   * UI: fix virtual console resize
   * UI: fix crash on 2D monitor strobing
+  * UI/Audio Editor: fix selected device index (thanks to Santiago Benejam Torres)
   * Virtual Console: fix Animation and Audio Trigger widgets to respond to submaster (thanks to Branimir Amidžić)
   * Virtual Console: fix submaster not affecting a Sequence in a Cue List (thanks to ryhel)
   * Resources: added Novation Launch Control XL input profile (thanks to pille)
