Updated changelog and docs with "acts on" feature

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qlcplus (4.12.4) stable; urgency=low
 
+  * engine: add "acts on" property to channels (thanks to Michał Kluska)
+
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 20 Dec 2020 12:13:14 +0200
 
 qlcplus (4.12.3) stable; urgency=low
