--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ qlcplus (4.12.4) stable; urgency=low
 
   * engine: RGB Matrix can now control white, amber, UV, dimmer and shutter channels too (started by Hans-Jürgen Tappe)
   * engine: add "acts on" property to channels (thanks to Michał Kluska)
+  * Virtual Console/Button: fix submaster not affecting a Chaser startup intensity
+  * Resources: add Novation Launchpad Mini MK3 (thanks to Felix)
+  * New fixture: Varytec Giga Bar Pix 8 RGB (thanks to Felix)
 
  -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 20 Dec 2020 12:13:14 +0200
 
