--- a/debian/changelog
+++ b/debian/changelog
@@ -6,12 +6,12 @@ qlcplus (4.12.4) stable; urgency=low
   * Plugins/E1.31: make CID unique on each network interface
   * Input profiles: added Novation Launchpad Mini MK3 (thanks to Felix)
   * Input profiles: added KORG nanoKONTROL Studio (thanks to Hans-Jürgen Tappe)
-  * RGB scripts: added 'Snow or bubbles' script (thanks to Hans-Jürgen Tappe)
+  * RGB scripts: added 'Snow or bubbles' and 'Blinder' scripts (thanks to Hans-Jürgen Tappe)
   * RGB scripts: added 'Lines' script (thanks to Branson Matheson)
   * RGB scripts: added brightness inversion to 'Starfield' script (thanks to Branson Matheson)
   * RGB scripts: added more parameters to 'Circles' script (thanks to Branson Matheson)
   * New fixture: Varytec Giga Bar Pix 8 RGB (thanks to Felix)
-  * New fixture: Clay Paky Mini-B
+  * New fixture: Clay Paky Mini-B, Xtylos, Sharpy Plus, Hepikos
   * New fixture: Eurolite LED PT-100/32 Pixel DMX Tube (thanks to Torsten Caninenberg)
   * New fixture: U'King LED Spot Moving Head 100W (thanks to Jay Seaman)
   * New fixtures: Equinox Microbar Quad System, U'King 7x10W Mini Moving Head (thanks to Peter Crowther)
